fix: Wrap expanded table content on text overflow

--- a/src/Table/table.css
+++ b/src/Table/table.css
@@ -106,6 +106,23 @@
 .invisibleColumn {
   border-bottom: 1px solid var(--table-column-border-color);
   justify-content: space-between;
+  height: auto;
+  min-height: 56px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.invisibleColumnChildren, .tableHeadColumnForInvisibleColumn {
+  flex: 0 0 50%;
+}
+
+.invisibleColumnChildren {
+  text-align: right;
+}
+
+.limitedInvisibleColumn {
+  word-break: break-all;
+  white-space: normal;
 }
 
 .sortIcon {
